--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==0.65.2
 pandas==1.1.1
 numpy==1.19.1
-awesome_streamlit==20200728.1
+awesome_streamlit
 matplotlib==3.3.1
 scipy==1.5.2
 pymongo==3.11.0
